--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,13 @@
 .DS_Store
 *.swp
 *~.nib
-  
+
+ 
 # Build dir
 build/
-  
+*.app/
+
+ 
 # Xcode project files except for the project file
 *.xcodeproj/
 !*.xcodeproj/project.pbxproj
